--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 spring:
   application:
     name: order-service
+  jpa:
+    show-sql: true
+    open-in-view: false
+
   profiles:
     active: dev
 
 server:
-  port: 8090
+  port: 8093
